<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".activities.SignInActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_12sdp"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/app_name"
                android:textColor="@color/primary_logo"
                android:textSize="@dimen/_32ssp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/app_logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:scaleType="fitEnd"
                android:src="@drawable/ic_logotemp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_app_name" />
        </LinearLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/login_to_continue"
            android:textAllCaps="false"
            android:textColor="@color/primary_white"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:background="@drawable/background_input_field"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:maxHeight="30dp"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_white"
            android:textColorHint="@color/primary_white"
            android:textSize="@dimen/_13ssp" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/background_input_field"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxHeight="64dp"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_purple"
            android:textColorHint="@color/primary_white"
            android:textSize="@dimen/_13ssp"
            app:cornerRadius="@dimen/_14sdp"
            app:strokeColor="@color/primary_white"
            app:strokeWidth="@dimen/_3sdp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginTop="@dimen/_17sdp"
            android:fontFamily="@font/open_sans_semibold"
            android:includeFontPadding="false"
            android:text="Sign IN"
            android:textColor="@color/primary"
            android:textSize="@dimen/_14ssp"
            android:textStyle="normal"
            app:cornerRadius="@dimen/_10sdp"
           />

        <TextView
            android:id="@+id/registerbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/open_sans_light"

            android:text="Dont Have An Account?"
            android:textColor="@color/secondary_white"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContinueWithFacebook"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:fontFamily="@font/open_sans_semibold"
            android:includeFontPadding="false"
            android:text="Continue with Facebook"
            android:textColor="@color/primary"
            android:textSize="@dimen/_10ssp"
            android:textStyle="normal"
            app:cornerRadius="@dimen/_24sdp"
            app:icon="@drawable/facebook"
            app:iconGravity="start"
            app:iconPadding="@dimen/_2sdp"
            app:iconSize="@dimen/_30sdp"
            app:iconTint="@color/black"
            app:iconTintMode="src_in" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContinueWithGoogle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/open_sans_semibold"
            android:includeFontPadding="false"
            android:text="Continue with Google"
            android:textColor="@color/primary"
            android:textSize="@dimen/_10ssp"
            android:textStyle="normal"
            app:cornerRadius="@dimen/_24sdp"
            app:icon="@drawable/ic_googlelogo"
            app:iconGravity="start"
            app:iconPadding="@dimen/_2sdp"
            app:iconSize="@dimen/_30sdp"
            app:iconTint="@color/black"
            app:iconTintMode="add" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContinueWithApple"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/open_sans_semibold"
            android:includeFontPadding="false"
            android:text="Continue with Apple"
            android:textColor="@color/primary"
            android:textSize="@dimen/_10ssp"
            android:textStyle="normal"
            app:cornerRadius="@dimen/_24sdp" />


    </LinearLayout>

</ScrollView>