<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:animateLayoutChanges="true"
tools:context=".fragments.CreateProfileUsernameSetupFragment">




<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_content_bottom"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:id="@+id/usernamenumsetup_cardbody"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardheader">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/username_graphic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_weight="3"
            android:background="@android:color/transparent"
            android:cropToPadding="false"
            android:src="@drawable/graphic_usernamesetup" />

        <LinearLayout
            android:id="@+id/usernamebodycontainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:animateLayoutChanges="true"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            android:padding="@dimen/_18sdp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:background="@android:color/transparent"
                android:defaultFocusHighlightEnabled="false"
                android:fontFamily="@font/open_sans"
                android:text="@string/usernamesetup_prompt"
                android:textColor="@color/primary_purple"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />



            <EditText
                android:id="@+id/inputUserName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:background="@drawable/background_input_field"
                android:hint="@string/full_name"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:maxHeight="30dp"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_white"
                android:textColorHint="@color/primary_white"
                android:textSize="@dimen/_13ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@android:color/transparent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:autoSizeMaxTextSize="@dimen/_36ssp"
                    android:background="@android:color/transparent"
                    android:defaultFocusHighlightEnabled="false"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/rules"
                    android:textColor="#CC412692"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/notinuse_rule_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:background="@android:color/transparent"
                    android:orientation="horizontal"

                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/notinuse_rule_graphic"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:background="@android:color/transparent"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_error" />

                    <TextView
                        android:id="@+id/notinuse_rule_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autoSizeMaxTextSize="@dimen/_36ssp"
                        android:background="@android:color/transparent"
                        android:defaultFocusHighlightEnabled="false"
                        android:fontFamily="@font/open_sans"
                        android:text="@string/notinuse_rule_text"
                        android:textColor="#CC412692"
                        android:textSize="@dimen/_10ssp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/charlimit_rule_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@android:color/transparent"
                    android:orientation="horizontal"

                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/charlimit_rule_graphic"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:background="@android:color/transparent"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_error" />

                    <TextView
                        android:id="@+id/charlimit_rule_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autoSizeMaxTextSize="@dimen/_36ssp"
                        android:background="@android:color/transparent"
                        android:defaultFocusHighlightEnabled="false"
                        android:fontFamily="@font/open_sans"
                        android:text="6-30 characters Long"
                        android:textColor="#CC412692"
                        android:textSize="@dimen/_10ssp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/symbolallow_rule_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@android:color/transparent"
                    android:orientation="horizontal"

                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/symbolallow_rule_graphic"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:background="@android:color/transparent"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_error" />

                    <TextView
                        android:id="@+id/symbolallow_rule_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autoSizeMaxTextSize="@dimen/_36ssp"
                        android:background="@android:color/transparent"
                        android:defaultFocusHighlightEnabled="false"
                        android:fontFamily="@font/open_sans"
                        android:text="Symbols not allowed:"
                        android:textColor="#CC412692"
                        android:textSize="@dimen/_10ssp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/startend_rule_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@android:color/transparent"
                    android:orientation="horizontal"

                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/startend_rule_graphic"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:background="@android:color/transparent"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_error" />

                    <TextView
                        android:id="@+id/startend_rule_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autoSizeMaxTextSize="@dimen/_36ssp"
                        android:background="@android:color/transparent"
                        android:defaultFocusHighlightEnabled="false"
                        android:fontFamily="@font/open_sans"
                        android:text="Only start and end with a letter number, or period"
                        android:textColor="#CC412692"
                        android:textSize="@dimen/_10ssp"
                        android:textStyle="bold" />


                </LinearLayout>


            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_usernamesetup"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_32sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:fontFamily="@font/open_sans_semibold"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_12sdp"
                android:text="Continue"
                android:textColor="@color/primary_purple"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_14sdp"
                app:strokeColor="@color/primary_purple"
                app:strokeWidth="@dimen/_3sdp" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cardheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:defaultFocusHighlightEnabled="false"
            android:fontFamily="@font/open_sans_semibold"
            android:padding="@dimen/_8sdp"
            android:text="Username Setup"
            android:textColor="@color/primary_purple"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_18sdp"
            android:progressTint="#412691" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>